Miscellaneous bug fixes (#55)
* Correct rounding error in reduceAmountOfHistoricalHeatMapData

* Disable heat map play button if the animation is already playing

* Disable Live/Historical Heat Map switching when playing animation

* Add custom scrollbar to notification region selector

--- a/src/components/Pages/NotificationsPage/SendNotificationForm/SendNotificationForm.module.scss
+++ b/src/components/Pages/NotificationsPage/SendNotificationForm/SendNotificationForm.module.scss
@@ -7,6 +7,25 @@ $formPadding: 40px;
   .bp3-tag {
     background-color: $highlight;
   }
+
+  .bp3-menu::-webkit-scrollbar {
+    width: $scrollbarThumbWidth;
+  }
+
+  .bp3-menu::-webkit-scrollbar-thumb {
+    background: $scrollbarThumbColour;
+    border-radius: 20px;
+  }
+
+  .bp3-menu::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 20px;
+  }
+
+  .bp3-popover-content .bp3-menu {
+    max-height: 300px;
+    overflow-y: auto;
+  }
 }
 
 .sendNotificationForm {
